Fix background color flickering

--- a/src/App/wwwroot/css/_authenticated.scss
+++ b/src/App/wwwroot/css/_authenticated.scss
@@ -126,7 +126,7 @@ h1, h2, h3, h4 {
 }
 
 body.page-dashboard {
-    background: url(../images/bg/login-overlay.png), center url(../images/bg/dashboard.jpg);
+    background: url(../images/bg/login-overlay.png), center url(../images/bg/dashboard.jpg) $body-bg;
     background-size: cover;
 
     .jumbotron {
